:construction: (BPuzzle) add BPuzzle test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(cp_ds)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(cp_ds main.cpp CNF.cc CNF.h DPLL.cc DPLL.h Strategy.cc Strategy.h)
+add_executable(cp_ds main.cc CNF.cc CNF.h DPLL.cc DPLL.h Strategy.cc Strategy.h)
+
+add_executable(bin_puzzle game_gen.cc BPuzzle.cc BPuzzle.h CNF.cc CNF.h DPLL.cc DPLL.h Strategy.cc Strategy.h)
