:recycle: (project struct) move files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,23 @@ project(cp_ds)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(cp_ds main.cc CNF.cc CNF.h DPLL.cc DPLL.h Strategy.cc Strategy.h)
 
-add_executable(bin_puzzle game_gen.cc BPuzzle.cc BPuzzle.h CNF.cc CNF.h DPLL.cc DPLL.h Strategy.cc Strategy.h)
+add_executable(sat_solver
+        cxx/sat_solver.cc
+        cxx/CNF.cc
+        cxx/CNF.h
+        cxx/DPLL.cc
+        cxx/DPLL.h
+        cxx/Strategy.cc
+        cxx/Strategy.h)
+
+add_executable(bin_puzzle
+        cxx/game_gen.cc
+        cxx/BPuzzle.cc
+        cxx/BPuzzle.h
+        cxx/CNF.cc
+        cxx/CNF.h
+        cxx/DPLL.cc
+        cxx/DPLL.h
+        cxx/Strategy.cc
+        cxx/Strategy.h)
