--- a/ts/package.json
+++ b/ts/package.json
@@ -87,6 +87,7 @@
     "@types/react-dom": "^16.9.6",
     "@types/react-redux": "^7.1.9",
     "babel-jest": "^25.4.0",
+    "classnames": "^2.2.6",
     "electron": "^8.2.4",
     "electron-builder": "^22.5.1",
     "jest": "^25.4.0",
@@ -103,6 +104,8 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/classnames": "^2.2.10",
+    "@types/node": "^14.6.4",
     "app-root-path": "^3.0.0",
     "cheerio": "^1.0.0-rc.3",
     "electron-is-dev": "^1.2.0",
